crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_wrap_prop_from_destructured_array.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { onClickQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useForm, useForm2 } from "./some-file.ts";
//
const q_Input_component_9metqqaxlN8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_Input_component_9metqqaxlN8"), "Input_component_9metqqaxlN8");
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export const Input = /*#__PURE__*/ componentQrl(q_Input_component_9metqqaxlN8);
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);

============================= test.tsx_test_component_div_button_q_e_click_2TvarUvNGmU.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const test_component_div_button_q_e_click_2TvarUvNGmU = () => {
	const store = _captures[0];
	store.errors.test = store.errors.test ? undefined : "ERROR TEST";
};

/*
{
  "origin": "test.tsx",
  "name": "test_component_div_button_q_e_click_2TvarUvNGmU",
  "entry": null,
  "displayName": "test.tsx_test_component_div_button_q_e_click",
  "hash": "2TvarUvNGmU",
  "canonicalFilename": "test.tsx_test_component_div_button_q_e_click_2TvarUvNGmU",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "store"
  ],
  "loc": [
    834,
    920
  ]
}
*/
============================= test.tsx_Input_component_9metqqaxlN8.js (ENTRY POINT) ==
import { useTask$ } from "@qwik.dev/core";
export const Input_component_9metqqaxlN8 = (props) => {
				useTask$(({ track }) => {
					track(() => props.error);
					track(() => props.error2);
					track(() => props.error3);
				});

				return (
					<>
					</>
				);
			};
/*
{
  "origin": "test.tsx",
  "name": "Input_component_9metqqaxlN8",
  "entry": null,
  "displayName": "test.tsx_Input_component",
  "hash": "9metqqaxlN8",
  "canonicalFilename": "test.tsx_Input_component_9metqqaxlN8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    146,
    402
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { Input } from "./test";
import { useForm } from "./some-file.ts";
import { useForm2 } from "./some-file.ts";
import { useStore } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
			const [store, math] = [useStore({errors: {}}), Math.random()];
			const [[store2]] = [[useStore({errors: {}})]];
			const { store3, math4 } = { store3: useStore({errors: {}}), math4: Math.random() };
			const math2 = [Math.random()];
			const { math3 } = { math3: Math.random() };
			const [store4] = useForm();
			const {store5} = useForm2();

			return (
				<div>
					<button onClick$={() => {
						store.errors.test = store.errors.test ? undefined : 'ERROR TEST';
					}}>click</button>
					<Input 
						error={store.errors.test}
						error2={store2.errors.test}
						error3={store3.errors.test}
						error4={store4.errors.test}
						error5={store5.errors.test}
						math={math}
						math2={math2}
						math3={math3}
						math4={math4}
					/>
				</div>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    422,
    1225
  ]
}
*/
============================= test.tsx_Input_component_useTask_Sbgs9Wtfkt0.js (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const Input_component_useTask_Sbgs9Wtfkt0 = ({ track }) => {
	const props = _captures[0];
	track(() => props.error);
	track(() => props.error2);
	track(() => props.error3);
};

/*
{
  "origin": "test.tsx",
  "name": "Input_component_useTask_Sbgs9Wtfkt0",
  "entry": null,
  "displayName": "test.tsx_Input_component_useTask",
  "hash": "Sbgs9Wtfkt0",
  "canonicalFilename": "test.tsx_Input_component_useTask_Sbgs9Wtfkt0",
  "path": "",
  "extension": "js",
  "parent": "Input_component_9metqqaxlN8",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "props"
  ],
  "loc": [
    227,
    354
  ],
  "paramNames": [
    "track"
  ]
}
*/
== DIAGNOSTICS ==
[]
