crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__should_wrap_store_expression.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export default qrl(() => import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
export const PANELS: ActivePanel[] = [
	"Examples",
	"Input",
	"Output",
	"Console"
];

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT) ==
import { PANELS } from "./test";
import { useStore } from "@qwik.dev/core";
export const test_component_LUXeXe0DQrg = () => {
			const panelStore = useStore(() => ({
				active: 'Input',
				list: PANELS,
			}));

			return (
				<div
					stuff={panelStore.active ? 'yes' : 'no'}
					class={{
						'too-long-to-wrap': true,
						'examples-panel-input': panelStore.active === 'Input',
						'examples-panel-output': panelStore.active === 'Output',
						'examples-panel-console': panelStore.active === 'Console',
					}}
				/>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    510
  ]
}
*/
== DIAGNOSTICS ==
[]
