crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__special_jsx.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.tsx ==
// don't transpile jsx with non-plain-object props
import { jsx } from "@qwik.dev/core";
export const App = () => {
	const props = {};
	return jsx("div", props, "Hello Qwik");
};
== DIAGNOSTICS ==
[]
