crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__support_windows_paths.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= components\apps\apps.ts ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$ } from "@qwik.dev/core";
const q__9HxOyz22pCE = /*#__PURE__*/ qrl(() => import("./componentsappsapps.tsx__9HxOyz22pCE"), "_9HxOyz22pCE");
export const Greeter = /*#__PURE__*/ componentQrl(q__9HxOyz22pCE);

============================= components\apps\apps.tsx__9HxOyz22pCE.ts (ENTRY POINT) ==
export const _9HxOyz22pCE = () => <div/>;
/*
{
  "origin": "components\\apps\\apps.tsx",
  "name": "_9HxOyz22pCE",
  "entry": null,
  "displayName": "components\\apps\\apps.tsx_",
  "hash": "9HxOyz22pCE",
  "canonicalFilename": "components\\apps\\apps.tsx__9HxOyz22pCE",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    69,
    93
  ]
}
*/
== DIAGNOSTICS ==
[]
