crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__ternary_prop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.ts ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, $, useSignal } from "@qwik.dev/core";
export const Cmp = qrl(() => import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");

============================= test.tsx_Cmp_component_4ryKJTOKjWE.ts (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
export const Cmp_component_4ryKJTOKjWE = () => {
			const toggleSig = useSignal(false);

			const handleClick$ = $(() => {
				toggleSig.value = !toggleSig.value;
			});

			return (
				<button onClick$={handleClick$} data-open={toggleSig.value ? true : undefined}>
					Removing data-open re-renders
				</button>
			);
		};
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    83,
    379
  ]
}
*/
============================= test.tsx_Cmp_component_handleClick_WawHV3HwS1A.ts (ENTRY POINT) ==
import { _captures } from "@qwik.dev/core";
export const Cmp_component_handleClick_WawHV3HwS1A = () => {
	const toggleSig = _captures[0];
	toggleSig.value = !toggleSig.value;
};

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_handleClick_WawHV3HwS1A",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_handleClick",
  "hash": "WawHV3HwS1A",
  "canonicalFilename": "test.tsx_Cmp_component_handleClick_WawHV3HwS1A",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "captureNames": [
    "toggleSig"
  ],
  "loc": [
    166,
    221
  ]
}
*/
== DIAGNOSTICS ==
[]
