crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__transform_qrl_in_regular_prop.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.ts ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Cmp_component_4ryKJTOKjWE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE"), "Cmp_component_4ryKJTOKjWE");
//
export const Cmp = /*#__PURE__*/ componentQrl(q_Cmp_component_4ryKJTOKjWE);

============================= test.tsx_Cmp_component_4ryKJTOKjWE.ts (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { Cmp } from "./test";
export const Cmp_component_4ryKJTOKjWE = () =>
			<Cmp foo={$(() => console.log('hi there'))}>Hello Qwik</Cmp>;
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "ts",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    153
  ]
}
*/
============================= test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE.ts (ENTRY POINT) ==
export const Cmp_component_Cmp_foo_iPpdemxi0uE = () => console.log("hi there");

/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_Cmp_foo_iPpdemxi0uE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_Cmp_foo",
  "hash": "iPpdemxi0uE",
  "canonicalFilename": "test.tsx_Cmp_component_Cmp_foo_iPpdemxi0uE",
  "path": "",
  "extension": "ts",
  "parent": "Cmp_component_4ryKJTOKjWE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    102,
    134
  ]
}
*/
== DIAGNOSTICS ==
[]
